# RRL_InvertedDoublePendulum-v4

./: README.md  pyproject.toml
agents/: ppo.py  render.py  sac.py
notebooks/: plot_results.ipynb  render_policy.ipynb
output/Hopper-v4/ppo/20260316_222227_seed1/: model.pt
output/Hopper-v4/ppo/20260318_014019_seed1/: config.yaml  returns.npy
output/Hopper-v4/sac/20260316_022535_seed1/: config.yaml
output/Hopper-v4/sac/20260316_025943_seed1/: config.yaml
output/InvertedDoublePendulum-v4/ppo/20260329_235447_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_000241_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_004204_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_005520_seed1/: config.yaml
output/InvertedDoublePendulum-v4/ppo/20260330_021042_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_021918_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_032742_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_033635_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/ppo/20260330_034701_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/sac/20260328_225927_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/sac/20260330_103907_seed1/: config.yaml  model.pt  returns.npy
output/InvertedDoublePendulum-v4/sac/20260330_112323_seed1/: config.yaml  (+2 more)
(+42 files in other folders)
